datasets/parsing_optimization/version1/shinhan_mr_life.md
# 신한카드 Mr.Life # 카드 디자인 ![image](/image/placeholder)
Mr.Life
VirlarCard 현대적으로 재해석한 강렬한 인상의 레드와 블랙,
다양한 라이프스타일을 아우르는 디자인 # 한눈에 보기 # 월납 할인 전기요금, 도시가스요금, 통신요금 10% 할인 # 주말 할인 - 3대 할인마트 10% 할인
- 4대 주유소 리터당 60원 할인
 # Time 할인 - 편의점, 병원, 약국, 세탁비 10% 할인
- 온라인 쇼핑, 택시, 식음료 10% 할인
 # 연회비 | 구분 | 구분 | 총연회비 | 기본연회비 | 서비스연회비 |
| --- | --- | --- | --- | --- |
| 국내전용 | S& | 1만 5천원 | 5천원 | 1만원 |
| 해외겸용 | VISA | 1만 8천원 | 5천원 | 1만 3천원 |
 - ※ 연회비는 카드별로 기본 연회비와 서비스 연회비를 합산한 총 연회비가 청구됩니다.
- ※ 가족카드는 발급이 불가합니다.
- ※ 후불교통카드 신청 가능합니다.
- ※ S& 브랜드는 신한카드가 아멕스와 제휴를 통해 개발한 신개념 브랜드로,
- 국내전용 연회비 납부만으로 해외에서 아멕스의 가맹점 및 ATM을 이용하실 수 있습니다.
 | 고객센터 | 1544-7000 | 단기/장기 카드대출 | 1544-0303 |
| --- | --- | --- | --- |
| 카드신청 | 1661-8599 | MF대출서비스 | 1661-2032 |
| 오토다이렉트 센터 | 1688-7474 | 할부금융 고객센터 | 1544-7100 |
 # 금융소비자 보호제도 안내 - ※ 금융소비자는 금융소비자보호법 제 19조 제 1항에 따라 해당 금융상품 또는 서비스에 대하여 설명받을 권리가 있으며,
- 그 설명 듣고 내용을 충분히 이해한 후 거래하시기 바랍니다.
- ※ 신용카드 발급이 부적정한 경우(개인신용평점 낮음, 연체(단기 포함) 사유 발생 등), 카드발급이 제한 될 수 있습니다.
- ※ 카드 이용대금과 이에 수반되는 모든 수수료는 고객님께서 지정하신 결제일에 상환하여야 합니다.
 # 부가서비스 변경안내 - ※ 카드이용시 제공되는 포인트 및 할인혜택 등의 부가서비스는 카드 신규출시(2015년 09월 03일) 이후 5년 이상
- 축소, 폐지 없이 유지됩니다.
- ※ 상기에도 불구하고, 다음과 같은 사유가 발생한 경우 카드사는 부가서비스를 변경할 수 있습니다.
 - ① 카드사의 휴업· 파산· 경영상의 위기 등에 따른 불가피한 경우
- ② 제휴업체의 휴업·파산· 경영상의 위기로 인해 불가피하게 부가서비스를 축소· 변경하는 경우로서
- 다른 제휴업체를 통해 동종의 유사한 부가서비스 제공이 불가한 경우
- ③ 제휴업체가 카드사의 의사에 반하여 해당 부가서비스를 축소하거나 변경 시, 당초 부가서비스에 상응하는
- 다른부가서비스를 제공하는 경우
- ④ 부가서비스를 3년 이상 제공한 상태에서 해당 부가서비스로 인해 카드의 수익성이 현저히 낮아진 경우
 ※ 카드사가부가서비스를 변경하는 경우에는 부가서비스 변경 사유, 변경 내용 등을 사유발생 즉시
아래 고지방법 중 2가지 이상의 방법으로 고지해 드립니다. 특히 부가서비스를 3년 이상 제공한 상태에서
해당 부가서비스로 인해 카드의 수익성이 현저히 낮아져 부가서비스를 변경하는 경우에는 6개월 전부터
아래 고지방법 중 2가지 이상의 방법으로 매월 고지 해 드립니다. - 고지 방법 :서면 교부, 우편 또는 전자우편, 전화 또는 팩스, 휴대폰 메시지 또는 이에 준하는 전자적 의사표시 # 해외이용 확인사항 ※ 해외 이용시(해외사이트 거래 포함) 미화(USD) 기준 거래미화금액에 접수일의 신한은행 최초고시
전신환매도율을 적용한 후, 국제브랜드사가 부과하는 국제브랜드 수수료(VISA 1.0%/ AMEX 1.4%)와 신한카드사가
부과하는 해외서비스 수수료(신용 0.18%, 체크 0.2%)를 포함하여 원화로 청구됩니다.
- 해외 이용시 청구금액 산출방법 - ▶ 해외 이용시 청구금액:(거래미화금액 x 전신환 매도율') + 국제브랜드 수수료2 + 해외서비스 수수료3
- (1)전신환 매도율:접수일의 신한은행 최초고시 전신환 매도율
- (2) 국제브랜드수수료:(거래미화금액 x 국제브랜드 이용수수료율(VISA 1.0% / AMEX 1.4%)) x 전신환 매도율
- (3) 해외서비스수수료:(거래미화금액 x 해외서비스 수수료율(신용 0.18%, 체크 0.2%)) x 전신환 매도율
 - - 단, 국제브랜드사 수수료는 국제브랜드사 정책에 따라 변경될 수 있습니다.
- - 해외 가맹점에서 원화로 거래시(DCC) 추가 수수료가 부과되므로 현지통화 또는 미화로 거래하시기 바랍니다.
- - 해외 가맹점에서 원화결제(DCC) 차단을 원하시는 경우 신한카드 고객센터(1544-7000) 및
- '신한카드 홈페이지/ 모바일앱> 편의> 해외원화결제(DCC) 사전차단'에서 신청 가능합니다.
 ※ 일부 해외 가맹점 거래 시 IC칩 비밀번호(PIN)를 요구하는 경우가 있으므로 출국 전 반드시 IC칩 비밀번호(PIN)
등록 여부를 확인하시기 바랍니다. # 체크카드 사용 시간 제한 ※ 각 은행/증권사 전산시스템 점검으로 인해 일부 시간대(23:30~07:00)에 거래가 일부 제한될 수 있으니
카드 이용에 참고하시기 바랍니다. 이용제한 시작 시간과 종료 시간은 각 기관별로 유동적일 수 있습니다. # 연회비 반환 기준 ※ 회원이 유효기간이 도래하기 전에 카드를 해지하는 경우, 연회비 반환 금액은 회원이 카드사와 계약을 해지한 날부터
일할 계산하여 산정합니다. 단, 카드의 발행 배송 등 카드발급에 소요된 비용(신규 가입년도에 해당)은 반환금액에서
제외되며, 제휴연회비가 있는 경우에는 카드 이용 시 제공되는 추가적인 혜택 등 부가서비스 제공에 소요된 비용이
추가적으로 반환 금액에서 제외됩니다. 연회비 반환은 계약을 해지한 날부터 10영업일 이내에 반환하여 드립니다.
단, 부가서비스 제공내역 확인에 시간이 소요되는 등 불가피한사유시에는 계약해지 날부터 3개월 이내 반환할 수 있습니다. - 
 # 기타 안내 - ※ 계약을 체결 전, 반드시 금융상품설명서 및 약관을 확인하시기 바랍니다.
- ※ 결제계좌 개설기관의 영업 마감시간(16시) 이후 결제계좌에 입금된 금액에 대해서는 결제계좌 개설 기관의
- 사정에 따라 당일 출금되지 못하여 연체로 처리 될 수 있으므로 유의하시기 바랍니다. 자동납부 업무 마감시간 이후
- 당사 홈페이지/모바일 등에서 즉시결제 또는 가상계좌 입금(송금납부)을 통해 당일 결제가 가능합니다.
- - 세부내용:신한카드 홈페이지/모바일 앱 > 고객센터> 자주하는 질문 >카드대금 결제방법 참조
- ※ 필요 이상의 신용카드를 발급받을 경우 신용등급 또는 개인신용평점, 이용한도 등에 영향을 미칠 수 있습니다.
- ※ 세부 내용은 신한카드 홈페이지(www.shinhancard.com)를 참조하시기 바랍니다.
- ※ 연체이자율은"회원별, 이용상품별 약정금리+최대 연 3%, 법정 최고금리(연 20%) 이내"에서 적용됩니다.
- 단, 연체 발생 시점에 약정금리가 없는 경우 약정금리는 아래와 같이 적용함
 - - 일시불 거래 연체 시: 거래 발생 시점의 최소기간(2개월) 유이자 할부 금리
- 、 무이자 할부 거래 연체 시 : 거래 발생 시점의 동일한 할부 계약기간의 유이자 할부 금리
- - 그 외의 경우 :상법상 상사법정이율과 상호금융 가계자금대출금리* 중 높은 금리 적용
- *한국은행에서 매월 발표하는 가장 최근의 비은행 금융기관 가중평균대출금리(신규대출 기준)
 - ※ 상환능력에 비해 신용카드 사용액이 과도할 경우, 귀하의 개인신용평점이 하락할 수 있습니다.
- ※ 개인신용평점 하락시 금융거래와 관련된 불이익이 발생할 수 있습니다.
- ※ 일정기간 신용카드 이용대금을 연체할 경우, 결제일이 도래하지 않은 모든 신용카드 이용대금을 변제할
- 의무가 발생할 수 있습니다.
- ※ 여신금융협회 심의필 제2023-C1a-00531호(2023.01.
 신한카드 Mr.Life 다양한 라이프스타일을 아우르다 Essential For
Every Lifestyle
Mr.Life 신한카드 ShinhanCard

신한카드 Mr.Life 월납 할인서비스 # 월납요금 # · 공과금 10% 할인 | 전월 실적 | 30~50만원 | 50~100만원 | 100만원 이상 |
| --- | --- | --- | --- |
| 할인한도 | 3천원 | 7천원 | 1만원 |
 | 구분 | 서비스 대상 | 서비스 제공 |
| --- | --- | --- |
| 공과금 | · 전기요금 도시가스요금 SKT, LG U+, KT 통신요금 : 인터넷 /집전화 / 이동통신요금 / 결합상품 포함 | 일 1회 할인 적용 1회 승인금액 5만원까지 할인 적용(1 회 최대 5천원 할인) |
 신한카드 Mr.Life 주말 할인서비스 # 주유/쇼핑 * 3대 할인마트 10% 할인 및 4대 주유소 리터당 60원 할인 | 전월 실적 | 30~50만원 | 50~100만원 | 100만원 이상 |
| --- | --- | --- | --- |
| 할인한도 | 3천원 | 7천원 | 1만원 |
 | 구분 | 서비스 대상 | 서비스 제공 |
| --- | --- | --- |
| 3대 할인마트 | 이마트, 롯데마트, 홈플러스 : 기업형 슈퍼마켓/온라인몰 포함, 상품권 제외 | 일 1회 할인 적용 1회 승인금액 5만원까지 할인 적용(1 회 최대 5천원 할인) |
| 4대 주유소 | SK에너지, GS칼텍스, 에이치디현대오일뱅크, S-Oil : 휘발유, 등유, 경유 (LPG 제외) | 일 1회 할인 적용 1회 승인금액 10만원까지 할인 적용 월 승인금액 30만원까지 할인 적용 |
 - ※ 주말할인서비스는 공휴일 여부와 상관없이 "토요일/일요일"에 해당되며,
- 토요일/일요일 외 공휴일은 해당되지 않습니다.
- ※ 정유사 공시 기준 휘발유가로 적용되어 할인되며, 등유/경유 거래도
- 휘발유가 기준으로 환산하여 서비스 제공됩니다.
- ※ 각 주유소別 유가차이 및 유류에 따라 할인금액 차이가 발생할 수 있습니다.
 신한카드 Mr.Life Time 할인서비스 [Time 할인서비스 할인한도] | 전월 실적 | 30~50만원 | 50~100만원 | 100만원 이상 |
| --- | --- | --- | --- |
| 할인한도 | 1만원 | 2만원 | 3만원 |
 All Day · 편의점, 병원/약국, 세탁비 10% 할인 | 구분 | 서비스 대상 | 서비스 제공 |
| --- | --- | --- |
| 편의점 | 편의점 업종 | 구분 영역별 각각 일 1회/ 월 5회 할인 적용 1회 승인금액 1만원까지 할인 적용(1회 최대 1천원 할인) |
| 병원/약국 | 병원/약국 업종 | 구분 영역별 각각 일 1회/ 월 5회 할인 적용 1회 승인금액 1만원까지 할인 적용(1회 최대 1천원 할인) |
| 세탁비 | 세탁소 업종 | 구분 영역별 각각 일 1회/ 월 5회 할인 적용 1회 승인금액 1만원까지 할인 적용(1회 최대 1천원 할인) |
 # Night # · 오후 9시 ~ 오전 9시까지 온라인쇼핑, 택시, 식음료 10% 할인 | 구분 | 서비스 대상 | 서비스 제공 |
| --- | --- | --- |
| 온라인 쇼핑 | 옥션, G마켓, AK몰, 11번가, 티켓몬스터, 위메프, 쿠팡 | 구분 영역별 각각 일 1회/ 월 10회 할인 적용 1회 승인금액 1만원까지 할인 적용(1 회 최대 1 천원 할인) |
| 택시 | 후불교통/비교통 카드 모두 적용 | 구분 영역별 각각 일 1회/ 월 10회 할인 적용 1회 승인금액 1만원까지 할인 적용(1 회 최대 1 천원 할인) |
| 식음료 | 한식, 양식, 일식, 중식, 뷔페, 일반대중음식점, 패스트푸드, 커피전문점 업종 | 구분 영역별 각각 일 1회/ 월 10회 할인 적용 1회 승인금액 1만원까지 할인 적용(1 회 최대 1 천원 할인) |
 - ※ 편의점, 병원/약국, 세탁소, 식음료는 신한카드 가맹점 업종 기준으로 할인이 제공됩니다.
- ※ Time할인서비스는 주중/주말 상관없이 제공되는 서비스이며,
- Night Time 할인서비스는 승인시간 기준으로 오후 9시부터 오전 9시까지 제공됩니다.
- ※ 병원/약국 10% 할인서비스 대상 가맹점에서 동물병원은 제외되며
- 치과, 한의원은 포함 제공됩니다.
- ※ 티켓몬스터, 위메프, 쿠팡 사이트 직접 접속 시 혹은 대상가맹점 앱을 통해서
- 접속시에만 할인이 적용됩니다.
 # [신한카드 Mr. Life 할인서비스 공통 유의사항] - ※ 서비스 대상 거래건 중 신한카드 전표 매입 순서대로 결제일 할인이 적용됩니다.
- ※ 신규 발급 회원에 대해서는 카드사용 등록월의 익월말(등록월+1 개월)까지
- 전월실적 30~50만원 구간의 할인한도가 제공됩니다.
- ※ 교통이용금액은 전전월 이용금액 기준이며, 해외이용금액은 매입일자를
- 기준으로 적용됩니다.
- ※ 장·단기 카드 대출/연회비/각종수수료/이자/기프트카드 구매금액/선불카드
- 충전금액/거래취소금액은 전월 이용금액에서 제외됩니다.
- ※ 월납/Time/주말 할인서비스는 전월 이용금액 구간에 따라 제공된 서비스별
- 월 할인 한도 내에서 제공됩니다.
 신한카드 Mr.Life 특화 서비스 # INTAKE · 인테이크몰(www.shopintake.com) 결제 시 20% 할인 건강한 음식을 배달해주는 인테이크 온라인 몰에서 Mr. Life로 결제 시,
전월 신판이용금액 (일시불+할부) 유실적 고객 대상
20% 할인이 제공됩니다. (월 4회) - ※ 신규 발급 회원에 대해서는 카드사용 등록월 익월말(등록월+1 개월)까지
- 실적 상관없이 할인이 제공됩니다.
- ※ 인테이크몰 직접 접속시에만 할인이 적용됩니다.